# qsi-loop-MC

./: .gitignore  MC_routines.cpp  MC_routines.hpp  loopMC.cpp  meson.build  observables.cpp  observables.hpp  struct.hpp
include/: format_bits.hpp
plot/: SQW_plot.ipynb
plot/.ipynb_checkpoints/: SQW_plot-checkpoint.ipynb
